Fix overflow carousel on projects section

--- a/src/App.css
+++ b/src/App.css
@@ -123,12 +123,14 @@ a:hover {
 
 .AboutMe {
   max-width: 40em;
-  margin:
+  /* margin: */
 }
 
 .Projects {
   /* justify-content: center; */
-  /* height: 100%; */
+  height: 100%;
+  min-height: 600px;
+
 }
 
 .Carousel {
